# ai-learning-assistant

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ACCEPTANCE_PLAN-验收计划.md  DESIGN-系统架构.md  DEVELOP_PLAN-开发计划.md  PRD-全能学习助理.md  新UI设计系统.md  李鹏亮个人简历 (1).md
docs/code_comparison/: README.md  manual_text_splitter.py
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml
frontend/src/api/: agents.ts  cards.ts  chat.ts  knowledge.ts  rag.ts  settings.ts
frontend/src/composables/: useAgentWorkspace.ts  useCardsManager.ts  useChatStream.ts  useKnowledgeManager.ts  useRagWorkspace.ts  useSettingsManager.ts  useThemeController.ts
frontend/src/config/: workspace.ts
frontend/src/mock/: workspace.ts
frontend/src/router/: index.ts
frontend/src/stores/: conversations.ts  modelSettings.ts  preferences.ts
frontend/src/styles/: main.css  tokens.css
frontend/src/types/: conversations.ts  workspace.ts
frontend/src/views/: WorkspaceShellView.vue
prototype/: index.html
src/ai_study_agent/: __init__.py
src/ai_study_agent/agent_capabilities/: __init__.py  registry.py  subagents.py
src/ai_study_agent/agents/: service.py
src/ai_study_agent/api/: __init__.py  errors.py  main.py
src/ai_study_agent/cards/: __init__.py  repository.py  service.py
src/ai_study_agent/core/: __init__.py  config.py  domain.py  ports.py
src/ai_study_agent/ingestion/: pdf_loader.py  text_splitter.py  (+1 more)
tests/: test_agents.py  test_api.py  test_cards.py  test_config.py  test_deepseek_gateway.py  test_domain.py  test_knowledge.py  test_rag.py
(+50 files in other folders)
