[project]
name = "ai-study-agent"
version = "0.1.0"
description = "AI knowledge workbench for Chat, RAG, and Agent learning workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.2",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langchain-ollama>=0.3.0",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.14.2",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
